Timeline post now aligns correctly on window resize

--- a/css/partials/_components.scss
+++ b/css/partials/_components.scss
@@ -104,6 +104,8 @@
     width: 100%;
     height: 100%;
     max-height: 28rem;
+    // max-width: 30.5rem;
+    flex-shrink: 1;
   }
   
   .c-custom-cat-title{
