--- a/css/ts.home.scss
+++ b/css/ts.home.scss
@@ -445,11 +445,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
   // justify-content: flex-start;
 }
 
-.pusher{
-  max-width: 4.5rem;
-  width: 100%;
-  // background: red;
-}
+
 
 .ghost-gap{
   height: 100%;
@@ -566,4 +562,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 
 #\37 0{
   background-position: 50% 70% !important;
+}
+
+.test_wrap{
+  display: inline-flex;
+  flex-flow: row nowrap;
+  flex-grow: 0;
+  flex-shrink: 1;
+  // flex-basis: 100%;
+  width: 100%;
+}
+
+.pusher{
+  // max-width: 4.5rem;
+  width: 100%;
+  flex-shrink: 1;
+  // background: red;
 }
